tests/e2e/tests/pilot/testdata/networking/v1alpha3/egressgateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    # DO NOT CHANGE THESE LABELS
    # The egressgateway is defined in install/kubernetes/helm/istio/values.yaml
    # with these labels
    istio: egressgateway
  servers:
  - port:
      number: 80 #also declared in gateway's deployment files
      name: http
      protocol: HTTP
    hosts:
    - "*.bookinfo.com"
  - port:
      number: 443
      name: sni
      protocol: TLS
    hosts:
    - www.google.com
    - www.bing.com
    tls:
      mode: PASSTHROUGH
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "*.bookinfo.com"
    tls:
      # This test ensures that we can have both passthrough and non passthrough on same port
      mode: SIMPLE #enables HTTPS on this port
      serverCertificate: /etc/certs/cert-chain.pem
      privateKey: /etc/certs/key.pem
      caCertificates: /etc/certs/root-cert.pem
